[package]
name = "rcomp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[global.cors]
fairing = true

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
zip = "0.6.6"
clap =  {version="4.3.0", features=["derive"]}
walkdir = "2.3.3"
tar = "0.4.38"
